[package]
name = "soi-io"
version = "0.1.3"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["TomtheCoder2 (Nautilus) <@TomtheCoder2>"]
description = "A simple library for reading and writing from stdin and stdout."
keywords = ["io", "stdin", "stdout", "read", "write"]
repository = "https://github.com/TomtheCoder2/soi"

[dependencies]
text_io = "0.1.12"